--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
+              <img class="img-fluid" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -85,7 +85,8 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF">
+              <img class="img-fluid" src="img/portfolio/friends2.gif" alt="Mac and cheese friends with benefits GIF">
+              <!-- <img class="img-fluid" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF"> -->
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -95,7 +96,8 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
+              <img class="img-fluid" src="img/portfolio/Trivia.gif" alt="Anime Character Annoyed by Resposibilities GIF">
+              <!-- <img class="img-fluid" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF"> -->
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -105,7 +107,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
+              <img class="img-fluid" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -115,7 +117,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/train.gif" alt="Train GIF">
+              <img class="img-fluid" src="img/portfolio/crystals.gif" alt="Crystal Floating in Hands GIF">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -125,7 +127,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/friends2.gif" alt="Mac and cheese friends with benefits GIF">
+              <img class="img-fluid" src="img/portfolio/train.gif" alt="Train GIF">
             </a>
           </div>
           <!-- <div class="col-md-6 col-lg-4">
@@ -260,29 +262,49 @@
 
     <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
-      <div class="portfolio-modal-dialog bg-white">
-        <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a> -->
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Giphy API</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
-              <p class="mb-5">This project is an anime GIF generator that utilizes Giphy's API. There is a list of animes that are pregenerated, but you may submit your own to see what comes up. Don't feel obligated to limit yourself to anime, play around and see what cool GIFs you can discover!</p>
-              <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-6-assignment/" target="_blank">Open Project</a>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
+        <div class="portfolio-modal-dialog bg-white">
+          <!-- <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+            <i class="fa fa-3x fa-times"></i>
+          </a> -->
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <h2 class="text-secondary text-uppercase mb-0">Spotify Movie Playlist</h2>
+                <hr class="star-dark mb-5">
+                <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
+                <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
+                <a class="btn btn-primary btn-lg rounded-pill" href="https://project-1-hackers.github.io/Project-1-BootCamp/?mode=select" target="_blank">Open Project</a>
+                <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                  <i class="fa fa-close"></i>
+                  Close Project</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+  
+      <!-- Portfolio Modal 2 -->
+      <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
+        <div class="portfolio-modal-dialog bg-white">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
+                <hr class="star-dark mb-5">
+                <img class="img-fluid mb-5" src="img/portfolio/friends2.gif" alt="Mac and Cheese friends with benefits GIF">
+                <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
+                <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open Project</a>
+                <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                  <i class="fa fa-close"></i>
+                  Close Project</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
       <div class="portfolio-modal-dialog bg-white">
         <div class="container text-center">
           <div class="row">
@@ -301,28 +323,28 @@
       </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
-      <div class="portfolio-modal-dialog bg-white">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Spotify Movie Playlist</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/Spotify-MP.gif" alt="Spotify Logo GIF">
-              <p class="mb-5">Utilizes OMDb API to find soundtrack info from user submitted movie then creates a spotify playlist out of said tracklist. You MUST have a Spotify account to use this application.</p>
-              <a class="btn btn-primary btn-lg rounded-pill" href="https://project-1-hackers.github.io/Project-1-BootCamp/?mode=select" target="_blank">Open Project</a>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+        <div class="portfolio-modal-dialog bg-white">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <h2 class="text-secondary text-uppercase mb-0">Giphy API</h2>
+                <hr class="star-dark mb-5">
+                <img class="img-fluid mb-5" src="img/portfolio/Ajax.gif" alt="Giphy API GIF">
+                <p class="mb-5">This project is an anime GIF generator that utilizes Giphy's API. There is a list of animes that are pregenerated, but you may submit your own to see what comes up. Don't feel obligated to limit yourself to anime, play around and see what cool GIFs you can discover!</p>
+                <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/unit-6-assignment/" target="_blank">Open Project</a>
+                <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                  <i class="fa fa-close"></i>
+                  Close Project</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <div class="container text-center">
           <div class="row">
@@ -341,8 +363,8 @@
       </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
         <div class="container text-center">
           <div class="row">
@@ -352,26 +374,6 @@
               <img class="img-fluid mb-5" src="img/portfolio/train.gif" alt="train GIF">
               <p class="mb-5">This project was made to learn Firebase as well as Moment.JS. The user submits a train name, destination and starting time and it gets added to the Firebase DB. Moment.JS then converts the time from military to standard and displays how many minutes until the next train will arrive as well as the time that the train should be arriving.</p>
               <a class="btn btn-primary btn-lg rounded-pill" href="https://corey-mitchell.github.io/Firebase-Assignment/" target="_blank">Open Project</a>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
-      <div class="portfolio-modal-dialog bg-white">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/friends2.gif" alt="Mac and Cheese friends with benefits GIF">
-              <p class="mb-5">Answer a short ten question survey and be matched up with a new friend!</p>
-              <a class="btn btn-primary btn-lg rounded-pill" href="https://friend-finder-supreme.herokuapp.com/" target="_blank">Open Project</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
